testdata/baselines/reference/submodule/conformance/esDecorators-classDeclaration-fields-staticAmbient(target=esnext).errors.txt
esDecorators-classDeclaration-fields-staticAmbient.ts(6,37): error TS1039: Initializers are not allowed in ambient contexts.
esDecorators-classDeclaration-fields-staticAmbient.ts(7,41): error TS1039: Initializers are not allowed in ambient contexts.
esDecorators-classDeclaration-fields-staticAmbient.ts(8,39): error TS1039: Initializers are not allowed in ambient contexts.


==== esDecorators-classDeclaration-fields-staticAmbient.ts (3 errors) ====
    declare let dec: any;
    
    const field3 = "field3";
    
    class C {
        @dec(1) static declare field1 = 1;
                                        ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
        @dec(2) static declare ["field2"] = 2;
                                            ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
        @dec(3) static declare [field3] = 3;
                                          ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    }
    